--- a/templates/maravillas.html
+++ b/templates/maravillas.html
@@ -1,76 +1,10 @@
-<!DOCTYPE html>
-<html lang="es-mx">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla Base</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</head>
-
-<body>
-
-    <header class="text-center m-3">
-        <h1>
-            Las 7 maravillas del mundo
-        </h1>
-    </header>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">Plantilla Base</a>
-
-            <div class="navbar-nav text-white">
-                <a class="nav-link active" aria-current="page" href="menu.html">Inicio</a>
-                <a class="nav-link" href="animales.html">Animales exoticos</a>
-                <a class="nav-link" href="vehiculos.html">Vehiculos antiguos</a>
-                <a class="nav-link" href="maravillas.html">Las maravillas del mundo</a>
-                <a class="nav-link" href="acerca.html">Acerca de</a>
-            </div>
-        </div>
-    </nav>
+{% block contenido %}
     <div class="m-3">
-        <h2 class="text-center">Un viaje por las joyas arquitectónicas del planeta</h2>
-        <p>
-           A lo largo de la historia, la humanidad ha construido obras impresionantes que reflejan su creatividad, fe y conocimiento. Las 7 Maravillas del Mundo Moderno fueron elegidas por su belleza, historia y valor cultural. Cada una representa una época, una civilización y un legado que sigue asombrando al mundo hoy en día.
-        </p>
-
-        <h3>1. Chichén Itzá (México)</h3>
-        <p>Fue una gran ciudad maya en la península de Yucatán. Su construcción más famosa es El Castillo o Templo de Kukulkán,
-             una pirámide escalonada de piedra con escaleras en los cuatro lados que servía como calendario solar. Fue elegida por representar el avanzado conocimiento astronómico y arquitectónico de la civilización maya. </p>
-        <img src="" alt="Chichén">
-
-        <h3>2. Coliseo Romano (Italia)</h3>
-        <p> Ubicado en Roma, fue un enorme anfiteatro donde se realizaban luchas de gladiadores y espectáculos públicos. Es una estructura circular de piedra y mármol con arcos y gradas. Fue elegido por simbolizar la grandeza del Imperio Romano y su ingeniería avanzada.</p>
-        <img src="" alt="Coliseo">
-
-        <h3>3. Taj Mahal (India)</h3>
-        <p>Este mausoleo de mármol blanco fue construido por el emperador Shah Jahan en honor a su esposa Mumtaz Mahal. Destaca por su gran cúpula y jardines perfectamente simétricos. Fue elegido por ser una obra maestra del arte y un símbolo del amor eterno.</p>
-        <img src="" alt="Taj Mahal">
-
-        <h3>4. Machu Picchu (Perú)</h3>
-        <p>Antigua ciudad inca situada en lo alto de los Andes. Está formada por templos y terrazas de piedra rodeadas de niebla y vegetación. Fue elegida por su misterio, belleza natural y por reflejar el gran conocimiento arquitectónico y espiritual de los incas.</p>
-        <img src="" alt="Machu">
-
-        <h3>5. Gran Muralla China (China)</h3>
-        <p> Una gigantesca fortificación construida para proteger al imperio chino de invasiones. Serpentea entre montañas y valles con muros de piedra y torres de vigilancia. Fue elegida por ser una hazaña monumental de defensa y resistencia humana.</p>
-        <img src="" alt="Gran Muralla" >
-
-        
-        <h3>6. Petra (Jordania)</h3>
-        <p> Ciudad tallada en piedra rosada por los nabateos hace más de 2,000 años. Sus templos y tumbas están esculpidos directamente en las rocas del desierto. Fue elegida por su arquitectura única y su importancia como centro comercial antiguo.</p>
-        <img src="" alt="Petra" >
-
-        
-        <h3>7. Cristo Redentor (Brasil)</h3>
-        <p> Una enorme estatua de Jesús con los brazos abiertos ubicada en el cerro del Corcovado, en Río de Janeiro. Está hecha de concreto y piedra jabón, y mide 38 metros de altura. Fue elegida por representar la fe, la paz y la unión del pueblo brasileño.</p>
-        <img src="" alt="Cristo" >
-
-    </div>
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</body>
-
-</html>
+    <h2 class="text-center">Un poco sobre mi</h2>
+    <p>Soy alumna del Cetis61, desde pequeña e sido muy perfeccionista, me gusta que las cosas se hagan a mi manera para asegurarme que salgan bien, esto me llevo a ser muy aplicada en la escuela desde que tengo memoria, en la escuela desarrolle la habilidad del dibujo, diseño y de la caligrafia, me gusta mucho hacer trabajos a mano para poder demostrar en ellos mis habilidades al escribir titulos y decorar de una manera que sea muy llamativa y bonita, una de las cosas que mas me gusta hacer es pasar tiempo con mi familia y amigos, me encanta salir a comprar ropa, pasear o comer fuera de casa, actualmente trabajo y estudio, tengo con esta dinamica desde los 15 por cuestiones economicas, vengo de una familia muy grande conformada por 6 miembros, 7 en total contandome a mi, yo tome la decision de trabajar para ayudar a mi papa y desde ese momento yo me hago cargo de mis gastos y de mis estudios. Lo que quiero ser en un futuro aun no lo tengo muy definido pero de algo que estoy segura es que quiero trabajar con algo relacionado a la programacion, yo entre en esta specialidad por mi primo que es mi gran ejemplo a seguir por ver en la poscicion que esta ahora,todo este tiempo e pensado rendirme o que esta especialidad no es para mi ya que yo entre sin saber absolutamente nada de una computadora, sin embargo cada vez me llama mas la atencion y me resulta muy interesante, me a gustado mucho y aunque sea dificil se que lograre graduarme y me esforzare por aprender para poder continuar la universidad. Mi sueño mas grande es tener un buen trabajo y ganar muy bien para poder ayudar a mis papas como agradecimiento por todo lo que an hecho por mi, tener mi casa, mi carro y vivir sola para poder viajar por el mundo.
+    </p>
+</div>
+{% endblock contenido %}
+    
