--- a/templates/acerca.html
+++ b/templates/acerca.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block titulo %}
+Acerca de mi
+{% endblock %}
+
 {% block contenido %}
     <div class="m-3">
     <h2 class="text-center">Un poco sobre mi</h2>
