--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block titulo %}
+Bienvenido
+{% endblock %}
+
 {% block contenido %}
 <div class="m-3">
     <h2 class="text-center">Bienvenido a mi pagina</h2>
