--- a/templates/vehiculos.html
+++ b/templates/vehiculos.html
@@ -1,10 +1,54 @@
 {% extends 'base.html' %}
 
+{% block titulo %}
+Vehiculos Antiguos
+{% endblock %}
+
 {% block contenido %}
+    <header class="text-center m-3">
+        <h1>
+            Vehículos Antiguos
+        </h1>
+    </header>
+
     <div class="m-3">
-    <h2 class="text-center">Un poco sobre mi</h2>
-    <p>Soy alumna del Cetis61, desde pequeña e sido muy perfeccionista, me gusta que las cosas se hagan a mi manera para asegurarme que salgan bien, esto me llevo a ser muy aplicada en la escuela desde que tengo memoria, en la escuela desarrolle la habilidad del dibujo, diseño y de la caligrafia, me gusta mucho hacer trabajos a mano para poder demostrar en ellos mis habilidades al escribir titulos y decorar de una manera que sea muy llamativa y bonita, una de las cosas que mas me gusta hacer es pasar tiempo con mi familia y amigos, me encanta salir a comprar ropa, pasear o comer fuera de casa, actualmente trabajo y estudio, tengo con esta dinamica desde los 15 por cuestiones economicas, vengo de una familia muy grande conformada por 6 miembros, 7 en total contandome a mi, yo tome la decision de trabajar para ayudar a mi papa y desde ese momento yo me hago cargo de mis gastos y de mis estudios. Lo que quiero ser en un futuro aun no lo tengo muy definido pero de algo que estoy segura es que quiero trabajar con algo relacionado a la programacion, yo entre en esta specialidad por mi primo que es mi gran ejemplo a seguir por ver en la poscicion que esta ahora,todo este tiempo e pensado rendirme o que esta especialidad no es para mi ya que yo entre sin saber absolutamente nada de una computadora, sin embargo cada vez me llama mas la atencion y me resulta muy interesante, me a gustado mucho y aunque sea dificil se que lograre graduarme y me esforzare por aprender para poder continuar la universidad. Mi sueño mas grande es tener un buen trabajo y ganar muy bien para poder ayudar a mis papas como agradecimiento por todo lo que an hecho por mi, tener mi casa, mi carro y vivir sola para poder viajar por el mundo.
-    </p>
-</div>
+        <h2 class="text-center">Evolucion del transporte</h2>
+        <p>
+            Los vehículos antiguos representan la evolución del transporte y el ingenio humano.
+        </p>
+
+        <h3>El Clásico Americano</h3>
+        <h4>Ford Mustang (1964)</h4>
+        <p>Lanzado en 1964, revolucionó el concepto de “pony car” y sigue siendo admirado por su estilo. Un deportivo
+            asequible y con estilo para el público joven, con una enorme influencia cultural. </p>
+        <img src="" alt="Mustang">
+
+        <h3>Innovación "Alas de Gaviota"</h3>
+        <h4> Mercedes-Benz 300SL (1957)</h4>
+        <p> Un hito en la historia automotriz por sus icónicas puertas de "ala de gaviota" y su diseño de auto de
+            carreras. Es uno de los autos clásicos más caros, un deportivo de alta gama que fusionaba innovación técnica
+            con un diseño espectacular.
+        </p>
+        <img src="" alt="Mercedes-Benz">
+
+        <h3>Ícono Alemán y Popular en México</h3>
+        <h4>Volkswagen Sedán (Vocho) (1960s a 1990s)</h4>
+        <p> Uno de los autos más queridos en México, reconocible por su diseño icónico y su durabilidad.Un vehículo
+            económico, funcional y con un diseño inconfundible que lo hizo popular en muchos países. </p>
+        <img src="" alt="Vocho">
+
+        <h3>Símbolo del Estilo Americano de los 50s y 60s</h3>
+        <h4>Chevrolet Impala (1965) </h4>
+        <p> Representa el estilo grande y de lujo de la década de 1960 en Estados Unidos, con una presencia imponente.Un
+            coche de gran tamaño, con un diseño característico y una experiencia de manejo lujosa, que definía los
+            "muscle cars"</p>
+        <img src="" alt="Chevrolet">
+
+        <h3></h3>
+        <h4>Jaguar E-Type (1961) </h4>
+        <p> Es considerado uno de los autos más bellos jamás diseñados, con una combinación de estética y rendimiento
+            deportivo.Un vehículo de lujo con un diseño revolucionario que lo convirtió en un símbolo de la era. </p>
+        <img src="" alt="Jaguar" >
+    </div>
 {% endblock contenido %}
     
