--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla Base</title>
+    <title>{% block titulo %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
@@ -17,7 +17,7 @@
         </h1>
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-info bg-info">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">Plantilla Base</a>
 
@@ -37,7 +37,7 @@
     
 <section>
     <footer>
-        <h6>todos los derechos reservados</h6>
+        <h6>Todos los derechos reservados</h6>
     </footer>
 </section>
 
