--- a/templates/maravillas.html
+++ b/templates/maravillas.html
@@ -1,47 +1,115 @@
 {% extends 'base.html' %}
 
+{% block pagina %}
+Las maravillas del mundo
+{% endblock %}
+
 {% block titulo %}
 Las 7 Maravillas del mundo
 {% endblock %}
 
-{% block contenido %}
-<div class="m-3">
-    <h2 class="text-center">Un viaje por las joyas arquitectónicas del planeta</h2>
-    <p>
-    A lo largo de la historia, la humanidad ha construido obras impresionantes que reflejan su creatividad, fe y conocimiento. Las 7 Maravillas del Mundo Moderno fueron elegidas por su belleza, historia y valor cultural. Cada una representa una época, una civilización y un legado que sigue asombrando al mundo hoy en día.
-    </p>
+{% block menu %}
+<div class="container my-5">
 
-    <h3>1. Chichén Itzá (México)</h3>
-    <p>Fue una gran ciudad maya en la península de Yucatán. Su construcción más famosa es El Castillo o Templo de Kukulkán,
-        una pirámide escalonada de piedra con escaleras en los cuatro lados que servía como calendario solar. Fue elegida por representar el avanzado conocimiento astronómico y arquitectónico de la civilización maya. </p>
-        <img src="" alt="Chichén">
+    <div class="container-text-center  mb-5">
+        <h2 class="fw-bold text-danger">Evolucion del transporte</h2>
+        <p>
+            Los vehículos antiguos representan la evolución del transporte y el ingenio humano. A continuacion te
+            mostramos 5 vehiculos antiguos que marcaron un antes y un despues en la historia de la evolucion de estos.
+        </p>
+    </div>
 
-        <h3>2. Coliseo Romano (Italia)</h3>
-        <p> Ubicado en Roma, fue un enorme anfiteatro donde se realizaban luchas de gladiadores y espectáculos públicos. Es una estructura circular de piedra y mármol con arcos y gradas. Fue elegido por simbolizar la grandeza del Imperio Romano y su ingeniería avanzada.</p>
-        <img src="" alt="Coliseo">
+    <div class="row align-items-center bg-light shadow p-4 mb-5">
+        <div class="col-md-6 text-center">
+            <img src="" alt="">
+        </div>
+        <div class="col-md-6">
+            <h4 class="fw-bold text-danger">Un viaje por las joyas arquitectónicas del planeta</h4>
+            <p>
+             A lo largo de la historia, la humanidad ha construido obras impresionantes que reflejan su creatividad, fe y conocimiento. Las 7 Maravillas del Mundo Moderno fueron elegidas por su belleza, historia y valor cultural. Cada una representa una época, una civilización y un legado que sigue asombrando al mundo hoy en día.
+            </p>
+        </div>
+    </div>
 
-        <h3>3. Taj Mahal (India)</h3>
-        <p>Este mausoleo de mármol blanco fue construido por el emperador Shah Jahan en honor a su esposa Mumtaz Mahal. Destaca por su gran cúpula y jardines perfectamente simétricos. Fue elegido por ser una obra maestra del arte y un símbolo del amor eterno.</p>
-        <img src="" alt="Taj Mahal">
+    <div class="text-center mb-4">
+        <h3 class="fw-bold text-danger">Las 7 Maravillas del mundo </h3>
+    </div>
 
-        <h3>4. Machu Picchu (Perú)</h3>
-        <p>Antigua ciudad inca situada en lo alto de los Andes. Está formada por templos y terrazas de piedra rodeadas de niebla y vegetación. Fue elegida por su misterio, belleza natural y por reflejar el gran conocimiento arquitectónico y espiritual de los incas.</p>
-        <img src="" alt="Machu">
+    <div class="row text-center">
 
-        <h3>5. Gran Muralla China (China)</h3>
-        <p> Una gigantesca fortificación construida para proteger al imperio chino de invasiones. Serpentea entre montañas y valles con muros de piedra y torres de vigilancia. Fue elegida por ser una hazaña monumental de defensa y resistencia humana.</p>
-        <img src="" alt="Gran Muralla" >
+        <div class="col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <img src="{{ url_for('static', filename='img/chiche.png') }}" class="card-img-top" alt="Pangolín">
+                <div class="card-body">
+                    <h5 class="card-title text-danger">Chichén Itzá (México)</h5>
+                    <p class="card-text">Fue una gran ciudad maya en la península de Yucatán. Su construcción más famosa es El Castillo o Templo de Kukulkán,
+            una pirámide escalonada de piedra con escaleras en los cuatro lados que servía como calendario solar. Fue elegida por representar el avanzado conocimiento astronómico y arquitectónico de la civilización maya. </p>
+                </div>
+            </div>
+        </div>
 
-        
-        <h3>6. Petra (Jordania)</h3>
-        <p> Ciudad tallada en piedra rosada por los nabateos hace más de 2,000 años. Sus templos y tumbas están esculpidos directamente en las rocas del desierto. Fue elegida por su arquitectura única y su importancia como centro comercial antiguo.</p>
-        <img src="" alt="Petra" >
+        <div class="col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <img src="{{ url_for('static', filename='img/coliseo.jpg') }}" class="card-img-top" alt="Pez Mandarín">
+                <div class="card-body">
+                    <h5 class="card-title text-danger">Coliseo Romano (Italia)</h5>
+                    <p class="card-text">Ubicado en Roma, fue un enorme anfiteatro donde se realizaban luchas de gladiadores y espectáculos públicos. Es una estructura circular de piedra y mármol con arcos y gradas. Fue elegido por simbolizar la grandeza del Imperio Romano y su ingeniería avanzada.</p>
+                </div>
+            </div>
+        </div>
 
-        
-        <h3>7. Cristo Redentor (Brasil)</h3>
-        <p> Una enorme estatua de Jesús con los brazos abiertos ubicada en el cerro del Corcovado, en Río de Janeiro. Está hecha de concreto y piedra jabón, y mide 38 metros de altura. Fue elegida por representar la fe, la paz y la unión del pueblo brasileño.</p>
-        <img src="" alt="Cristo" >
+        <div class="col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <img src="{{ url_for('static', filename='img/taj.jpg') }}" class="card-img-top" alt="Pez hacha">
+                <div class="card-body">
+                    <h5 class="card-title text-danger">Taj Mahal (India)</h5>
+                    <p class="card-text">Este mausoleo de mármol blanco fue construido por el emperador Shah Jahan en honor a su esposa Mumtaz Mahal. Destaca por su gran cúpula y jardines perfectamente simétricos. Fue elegido por ser una obra maestra del arte y un símbolo del amor eterno.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <img src="{{ url_for('static', filename='img/machu.jpg') }}" class="card-img-top" alt="Pangolín">
+                <div class="card-body">
+                    <h5 class="card-title text-danger">Machu Picchu (Perú)</h5>
+                    <p class="card-text">Antigua ciudad inca situada en lo alto de los Andes. Está formada por templos y terrazas de piedra rodeadas de niebla y vegetación. Fue elegida por su misterio, belleza natural y por reflejar el gran conocimiento arquitectónico y espiritual de los incas. </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <img src="{{ url_for('static', filename='img/muralla.jpg') }}" class="card-img-top" alt="Pangolín">
+                <div class="card-body">
+                    <h5 class="card-title text-danger">Gran Muralla China (China) </h5>
+                    <p class="card-text">Una gigantesca fortificación construida para proteger al imperio chino de invasiones. Serpentea entre montañas y valles con muros de piedra y torres de vigilancia. Fue elegida por ser una hazaña monumental de defensa y resistencia humana.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <img src="{{ url_for('static', filename='img/petra.jpg') }}" class="card-img-top" alt="Pangolín">
+                <div class="card-body">
+                    <h5 class="card-title text-danger">Petra (Jordania) </h5>
+                    <p class="card-text">Ciudad tallada en piedra rosada por los nabateos hace más de 2,000 años. Sus templos y tumbas están esculpidos directamente en las rocas del desierto. Fue elegida por su arquitectura única y su importancia como centro comercial antiguo.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-12 mb-4">
+            <div class="card border-0 shadow">
+                <img src="{{ url_for('static', filename='img/redentor.jpg') }}" class="card-img-top" alt="Pangolín">
+                <div class="card-body">
+                    <h5 class="card-title text-danger">Cristo Redentor (Brasil) </h5>
+                    <p class="card-text">Una enorme estatua de Jesús con los brazos abiertos ubicada en el cerro del Corcovado, en Río de Janeiro. Está hecha de concreto y piedra jabón, y mide 38 metros de altura. Fue elegida por representar la fe, la paz y la unión del pueblo brasileño.</p>
+                </div>
+            </div>
+        </div>
 
     </div>
-{% endblock contenido %}
+
+</div>
+{% endblock menu %}
     
